[package]
name = "rusted_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
system_test = []

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
